--- a/src/content/devlog/1-platform-setup.mdx
+++ b/src/content/devlog/1-platform-setup.mdx
@@ -10,39 +10,62 @@ coverImage: "/images/devlog-1-cover.svg"
 import CalloutBox from '../../components/CalloutBox.astro';
 import ChartComponent from '../../components/ChartComponent.astro';
 
+export const chartData = {
+  labels: ['Astro', 'Astro Components', 'Tailwind CSS', 'MDX', 'Google Analytics'],
+  datasets: [
+    {
+      label: 'Technology Adoption',
+      data: [95, 92, 90, 65, 70],
+      backgroundColor: 'rgba(59, 130, 246, 0.5)',
+      borderColor: 'rgb(59, 130, 246)',
+      borderWidth: 1
+    }
+  ]
+};
+
 <p class="lead">
   Today marks the beginning of a new journey. I'm excited to share the creation process of <em>Signals &amp; Systems</em>,
   a personal publishing platform I'm building from the ground up to host long-form, interactive content.
 </p>
-
-## The Vision
-
-As both an educator and technologist, I've always found myself at the intersection of content creation and technical implementation. I wanted a platform that would give me complete control over how my articles appear, how they function, and how they evolve over time. More importantly, I wanted a canvas for experimentation—a place where I could seamlessly blend written content with interactive elements.
-
+<h2 class="text-2xl font-bold mt-8 mb-4">The Vision</h2>
+<p>
+  As both an educator and technologist, I've always found myself at the intersection of content creation and
+  technical implementation. I wanted a platform that would give me complete control over how my articles appear,
+  how they function, and how they evolve over time. More importantly, I wanted a canvas for experimentation—a place
+  where I could seamlessly blend written content with interactive elements.
+</p>
 <CalloutBox type="tip">
-  When creating your own publishing platform, start with a clear vision of what you want to accomplish. This will guide your technical decisions and help you avoid unnecessary complexity.
+  <p>
+    When creating your own publishing platform, start with a clear vision of what you want to accomplish.
+    This will guide your technical decisions and help you avoid unnecessary complexity.
+  </p>
 </CalloutBox>
-
-## Technology Choices
-
-After evaluating several options, I settled on a tech stack that prioritizes performance, simplicity, and developer experience:
-
-- **Astro**: A modern static site generator that delivers excellent performance by default, with minimal JavaScript.
-- **Astro Components**: Using Astro's component system for creating reusable UI elements with HTML-like syntax.
-- **MDX (Future)**: Planning to explore Markdown with JSX support for simpler content writing workflow.
-- **Tailwind CSS**: A utility-first CSS framework that makes styling straightforward and consistent.
-- **Google Analytics**: For basic audience insights while respecting privacy concerns.
-
+<h2 class="text-2xl font-bold mt-8 mb-4">Technology Choices</h2>
+<p>
+  After evaluating several options, I settled on a tech stack that prioritizes performance, simplicity, and
+  developer experience:
+</p>
+<ul>
+  <li><strong>Astro</strong>: A modern static site generator that delivers excellent performance by default, with minimal JavaScript.</li>
+  <li><strong>Astro Components</strong>: Using Astro's component system for creating reusable UI elements with HTML-like syntax.</li>
+  <li><strong>MDX (Future)</strong>: Planning to explore Markdown with JSX support for simpler content writing workflow.</li>
+  <li><strong>Tailwind CSS</strong>: A utility-first CSS framework that makes styling straightforward and consistent.</li>
+  <li><strong>Google Analytics</strong>: For basic audience insights while respecting privacy concerns.</li>
+</ul>
 <div class="my-8">
   <p class="text-lg font-medium text-gray-700 mb-2">Technology Selection Confidence</p>
-  <ChartComponent description="My confidence level (0-100) in each technology choice for this platform." />
+  <ChartComponent 
+    type="bar" 
+    data={chartData} 
+    title="" 
+    description="My confidence level (0-100) in each technology choice for this platform."
+  />
 </div>
-
-## Project Structure
-
-I've organized the project with a focus on modularity and maintainability:
-
-```
+<h2 class="text-2xl font-bold mt-8 mb-4">Project Structure</h2>
+<p>
+  I've organized the project with a focus on modularity and maintainability:
+</p>
+<pre><code>
 signals-and-systems/
 ├── src/
 │   ├── components/    # Reusable UI components
@@ -51,64 +74,63 @@ signals-and-systems/
 │   └── styles/        # Global styles and Tailwind config
 ├── public/            # Static assets
 └── astro.config.mjs   # Astro configuration
-```
-
-## The Design Philosophy
-
-For this platform, I'm embracing a minimalist design approach with a focus on readability and content hierarchy. The typography is carefully chosen to ensure comfortable reading for long-form articles, and the color palette is subtle yet distinctive.
-
-A key principle I'm following is "progressive enhancement"—ensuring that content is accessible and functional even without JavaScript, then layering interactivity for browsers that support it.
-
+  </code></pre>
+<h2 class="text-2xl font-bold mt-8 mb-4">The Design Philosophy</h2>
+<p>
+  For this platform, I'm embracing a minimalist design approach with a focus on readability and content hierarchy.
+  The typography is carefully chosen to ensure comfortable reading for long-form articles, and the color palette
+  is subtle yet distinctive.
+</p>
+<p>
+  A key principle I'm following is "progressive enhancement"—ensuring that content is accessible and functional
+  even without JavaScript, then layering interactivity for browsers that support it.
+</p>
 <CalloutBox type="info">
-  Progressive enhancement is about building a solid foundation first, then adding features for capable browsers.
+  <p>
+    The interactive elements in this platform are built with a "load on demand" approach to maintain fast initial page loads.
+  </p>
 </CalloutBox>
-
-## The Ethical Considerations
-
-As I build this platform, I'm constantly thinking about the ethical dimensions of digital publishing:
-
-- **Privacy**: Minimizing data collection and being transparent about what's collected.
-- **Accessibility**: Ensuring content is accessible to all readers, regardless of ability.
-- **Sustainability**: Building a platform with minimal environmental impact through efficient code and assets.
-- **Vibecoding**: Exploring the balance between technical optimization and human-centered design.
-
-## Visual Design Evolution
-
-One of the key aspects of this platform is the visual design. I wanted to create a clean, distraction-free reading experience that still allows for interactive elements when needed. After experimenting with various approaches, I settled on:
-
-- **SVG-based graphics** - Vector graphics provide crisp visuals at any resolution while keeping file sizes small
-- **Custom author images** - Designed with integrated social media links to GitHub and LinkedIn
-- **Visual hierarchy** - Typography scales and spacing to guide the reader through content
-- **Subtle animations** - Used sparingly to provide feedback and draw attention where appropriate
-
+<h2 class="text-2xl font-bold mt-8 mb-4">The Ethical Considerations</h2>
+<p>
+  As I build this platform, I'm constantly thinking about the ethical dimensions of digital publishing:
+</p>
+<ul>
+  <li><strong>Privacy</strong>: Minimizing data collection and being transparent about what's collected.</li>
+  <li><strong>Accessibility</strong>: Ensuring content is accessible to all readers, regardless of ability.</li>
+  <li><strong>Sustainability</strong>: Building a platform with minimal environmental impact through efficient code and assets.</li>
+  <li><strong>Vibecoding</strong>: Exploring the balance between technical optimization and human-centered design.</li>
+</ul>
+<h2 class="text-2xl font-bold mt-8 mb-4">Visual Design Evolution</h2>
+<p>
+  One of the key aspects of this platform is the visual design. I wanted to create a clean, distraction-free reading experience that
+  still allows for interactive elements when needed. After experimenting with various approaches, I settled on:
+</p>
+<ul>
+  <li><strong>SVG-based graphics</strong> - Vector graphics provide crisp visuals at any resolution while keeping file sizes small</li>
+  <li><strong>Custom author images</strong> - Designed with integrated social media links to GitHub and LinkedIn</li>
+  <li><strong>Visual hierarchy</strong> - Typography scales and spacing to guide the reader through content</li>
+  <li><strong>Interactive charts</strong> - Data visualization that enhances written content without overwhelming it</li>
+  <li><strong>Subtle animations</strong> - Used sparingly to provide feedback and draw attention where appropriate</li>
+</ul>
 <CalloutBox type="info" title="Design Philosophy">
-  For this platform, I'm embracing a minimalist design approach with a focus on readability and content hierarchy. The typography is carefully chosen to ensure comfortable reading for long-form articles, and the color palette is subtle yet distinctive.
-
-  A key principle I'm following is "progressive enhancement"—ensuring that content is accessible and functional even without JavaScript, then layering interactivity for browsers that support it.
+  <p>
+    The platform's design aims to prioritize content readability above all else. Interactive components should enhance
+    the narrative, not distract from it. This philosophy guides all design decisions from typography to component behaviors.
+  </p>
 </CalloutBox>
-
-## Technical Implementation Highlights
-
-- Project initialized with Astro and TypeScript configuration
-- Created basic component structure
-- Implemented initial page layouts
-- Set up navigation and basic routing
-- Created placeholder content for main pages
-- Added base styling with Tailwind CSS integration
-- Established project organization and folder structure
-- Updated package dependencies and configuration
-- Configured Astro with MDX support
-- Updated BaseLayout with metadata and SEO improvements
-- Implemented ChartComponent for data visualization
-- Added initial image assets for articles and profiles
-- Created high-quality SVG versions of all site graphics
-- Updated README with comprehensive project documentation
-- Created first devlog article documenting platform setup
-- Enhanced Footer and AuthorBio components
-- Updated navigation with consistent site structure
-
-## Changelog
-
+<h2 class="text-2xl font-bold mt-8 mb-4">Technical Implementation Highlights</h2>
+<p>
+  Some of the more interesting technical aspects of this implementation include:
+</p>
+<ul>
+  <li><strong>Astro's Islands Architecture</strong> - Allows us to ship minimal JavaScript while still enabling interactive components</li>
+  <li><strong>Astro Components</strong> - Using Astro's native component system for clean organization and reusability</li>
+  <li><strong>Future MDX Integration</strong> - Planning to explore a more markdown-native approach while maintaining component capabilities</li>
+  <li><strong>Dynamic Chart Rendering</strong> - Asynchronously loads Chart.js only when needed to optimize page performance</li>
+  <li><strong>Responsive Typography</strong> - Scales beautifully across device sizes using Tailwind's responsive utilities</li>
+  <li><strong>Build-time SEO Optimization</strong> - Leverages Astro's static generation for optimal search visibility</li>
+</ul>
+<h2 class="text-2xl font-bold mt-8 mb-4">Changelog</h2>
 <pre class="text-sm bg-gray-100 p-4 rounded overflow-auto">
 <code>2025-05-21 08:58 - Project initialized with Astro and TypeScript configuration #setup #astro
 2025-05-21 20:30 - Created basic component structure #components #structure
@@ -127,19 +149,47 @@ One of the key aspects of this platform is the visual design. I wanted to create
 2025-05-22 16:46 - Created first devlog article documenting platform setup #content #devlog
 2025-05-22 16:48 - Enhanced Footer and AuthorBio components #components #navigation
 2025-05-22 18:30 - Updated navigation with consistent site structure #navigation #ux</code>
-</pre>
-
-## What's Next
-
-- Add more interactive components
-- Continue refining the design
-- Document development principles
-- Explore new features and approaches
-
+  </pre>
+<h2 class="text-2xl font-bold mt-8 mb-4">What's Next</h2>
+<p>
+  This is just the beginning. In the next devlog entry, I'll dive deeper into the implementation details of the components
+  I've created, particularly focusing on the interactive elements and how they enhance content. Here's a preview of what's coming:
+</p>
 <CalloutBox type="info" title="Development Principles">
-  Stay tuned for more updates and insights as the platform evolves!
+  <p class="mb-2">
+    For every future development step, we will adhere to these core principles:
+  </p>
+  <ul class="list-disc pl-5 space-y-1">
+    <li><strong>Detailed Documentation</strong>: Always update the CHANGELOG.md and devlog with specific details for each change</li>
+    <li><strong>Component Awareness</strong>: Reference and update COMPONENTS.md as we develop to maintain a consistent component library</li>
+    <li><strong>Minimalism</strong>: Focus on essential functionality without feature bloat</li>
+    <li><strong>Performance</strong>: Optimize for speed and efficiency across all devices</li>
+    <li><strong>Cutting-Edge Practices</strong>: Stay current with web development best practices</li>
+    <li><strong>Component Reuse</strong>: Prefer enhancing existing components over creating new ones</li>
+  </ul>
 </CalloutBox>
-
+<h3 class="text-xl font-semibold mt-6 mb-3">Upcoming Features</h3>
+<ul>
+  <li><strong>Interactive Components Deep Dive</strong> - A closer look at Chart.js integration and dynamic content</li>
+  <li><strong>Enhanced Code Syntax Highlighting</strong> - Adding better code blocks with language support</li>
+  <li><strong>Dark Mode Implementation</strong> - Creating a toggleable dark theme with consistent styling</li>
+  <li><strong>MDX Integration Exploration</strong> - Evaluating how to add MDX support while maintaining our component system</li>
+  <li><strong>Search Functionality</strong> - Adding client-side search capabilities</li>
+</ul>
+<h3 class="text-xl font-semibold mt-6 mb-3">Vibecoding: A New Development Approach</h3>
+<p>
+  "Vibe coding" is a term used to describe a new approach to software development that leverages AI to automate parts of the coding process.
+  It's characterized by focusing on the overall intent of the project and allowing AI tools to handle the syntax and structure.
+  Essentially, developers describe what they want to achieve in natural language, and AI tools generate the code.
+</p>
+<p>
+  This approach aims to balance technical excellence with emotional resonance, creating systems that not only function well but also
+  feel good to use. Through Signals & Systems, we'll explore how vibecoding can be applied to create more intuitive, human-centered digital experiences.
+</p>
 <CalloutBox type="tip" title="Join the Conversation">
-  Share your thoughts and feedback!
+  <p>
+    Have thoughts on this approach or suggestions for future devlog topics? I'd love to hear from you!
+    Connect with me on <a href="https://github.com/Tamok" class="text-blue-600 hover:text-blue-800">GitHub</a> or
+    <a href="https://www.linkedin.com/in/jonathan-engeln/" class="text-blue-600 hover:text-blue-800">LinkedIn</a>.
+  </p>
 </CalloutBox>
